kubefiles/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: beerstock-ingress
  namespace: quarkus-cqrs-demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: beerstock-ingress
spec:
  rules:
    - http:
        paths:
          - path: /transaction-service/*
            backend:
              serviceName: transaction-service
              servicePort: 8080
          - path: /stock-service/*
            backend:
              serviceName: stock-service
              servicePort: 8080
